--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -77,7 +77,7 @@
                     </div>
                 {% else %}
                     <p class="lead mb-5">Your cart is empty</p>
-                    <a href="{% url 'courses' %}" class="btn cart-browse-btn rounded-0 btn-lg">
+                    <a href="{% url 'courses' %}" class="btn btn-lg rounded-0 text-uppercase py-3 cart-browse-btn border border-black border-1">
                         <span class="icon">
                             <i class="fa-solid fa-dog"></i>
                         </span>
