--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,6 +110,14 @@ header {
     border: 1px solid black !important;
 }
 
+/* -------------------------------- Toasts */
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 999999999999;
+}
+
 /* -------------------------------- Courses page */
 
 body.courses-page {
