--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -8,8 +8,41 @@
         <strong class="me-auto">Success!</strong>
         <button type="button" class="btn-close btn-close-black ms-2 mb-1" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
+
       <div class="toast-body bg-white text-black">
-        {{ message }}
+        <div class="row">
+          <div class="col">
+            {{ message }}
+            <hr class="mt-1 mb-3">
+          </div>
+        </div>
+        {% if grand_total %}
+          <p class=""><strong>Your cart ({{ cart_items|length }})</strong></p>
+          <div class="cart-notification-wrapper">
+            {% for item in cart_items %}
+              <div class="row">
+                <div class="col-3 my-1">
+                  <img class="w-100 rounded" src="{{ item.course.image.url }}" alt="{{ item.course.title }}">
+                </div>
+                <div class="col-9">
+                  <p class="my-0 logo-font"><strong>{{ item.course.title }}</strong></p>
+                  <p class="my-0 small">€{{ item.course.price }}</p>
+                </div>
+              </div>
+          {% endfor %}
+        </div>
+        
+        <div class="row">
+          <div class="col">
+            <p class="mt-3 mb-1 text-black fw-bold">
+              <span class="float-end">Grand Total: €{{ grand_total|floatformat:2 }}</span>
+            </p>
+            <a href="{% url 'view_cart' %}" class="btn btn-sm view-cart-btn text-dark">
+              <i class="fa-solid fa-cart-shopping"></i> View Cart
+            </a>
+          </div>
+        </div>
+        {% endif %}
       </div>
     </div>
 
