--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -23,7 +23,7 @@
         </li>
         <!-- Course Bundles -->
         <li class="nav-item dropdown">
-            <a href="#" class="main-nav-link logo-font fw-bold nav-link me-5" id="bundles-link">
+            <a href="{% url 'bundles' %}" class="main-nav-link logo-font fw-bold nav-link me-5" id="bundles-link">
                 Course Bundles
             </a>
         </li>
