--- a/bundles/templates/bundles/bundles.html
+++ b/bundles/templates/bundles/bundles.html
@@ -4,9 +4,10 @@
 {% block body_class %}bundles-page{% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
+    <div class="container header-container list-pages-headers">
         <div class="row">
             <div class="col">
+                <h2 class="text-center text-uppercase">Bundles</h2>
             </div>
         </div>
     </div>
@@ -20,7 +21,7 @@
                 <div class="row mt-1 mb-2"></div>
                 <div class="row">
                     {% for bundle in bundles %}
-                        <div class="col-sm-12 col-md-6 col-lg-4 pb-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4 pb-5">
                             <div class="card h-100">
                                 {% if bundle.image %}
                                     <img src="{{ bundle.image.url }}" class="card-img-top" alt="{{ bundle.title }}" loading="lazy">
@@ -49,6 +50,8 @@
                                     <form action="{% url 'add_to_cart' bundle.id %}" method="POST">
                                         {% csrf_token %}
                                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                        <!-- cart has to handle both bundles and courses -->
+                                        <input type="hidden" name="item_type" value="bundle">
                                         <button type="submit" class="add-to-cart-link text-black text-uppercase btn border border-1 border-black">
                                             Add to cart
                                         </button>
