--- a/static/css/base.css
+++ b/static/css/base.css
@@ -268,6 +268,11 @@ a.secure-checkout-btn:focus {
     text-decoration: underline solid 1px;
 }
 
+.cart-item-img {
+    width: 100px;
+    height: auto;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
