Set up crispy-bootstrap5 and complete checkout template layout

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -75,7 +75,7 @@
                                         <a href="{% url 'courses' %}" class="btn btn-lg rounded-0 text-uppercase py-3 cart-browse-btn border border-black border-1">
                                             <i class="fa-solid fa-dog"></i> Keep Browsing
                                         </a>
-                                        <a href="#" class="btn btn-lg rounded-0 text-uppercase py-3 secure-checkout-btn border border-black border-1">
+                                        <a href="{% url 'checkout' %}" class="btn btn-lg rounded-0 text-uppercase py-3 secure-checkout-btn border border-black border-1">
                                             Secure Checkout <i class="fa-solid fa-lock"></i>
                                         </a>
                                     </td>
