--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -26,14 +26,21 @@
 
         <div class="row">
             <!-- Order Summary -->
-            <div class="col-12 col-lg-6 order-lg-last mb-5">
+            <div class="col-12 col-lg-6 mb-5">
                 <h3 class="mb-4">Order Summary</h3>
                 <p class="text-muted">Order Summary ({{ product_count }})</p>
                 <div class="row">
-                    <div class="col-7 offset-2">
+                    <div class="col-2">
+                        <p class="mb-1 mt-0 small text-muted">Item</p>
+                    </div>
+                    <!-- Blank for spacing -->
+                    <div class="col-7"></div>
+                    <div class="col-3 text-end">
                         <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                     </div>
                 </div>
+                <hr>
+
                 {% for item in cart_items %}
                     <div class="row">
                         <div class="col-2 mb-1">
@@ -58,7 +65,6 @@
                             {% elif item.bundle %}
                                 <p class="my-0"><strong>{{ item.bundle.title }}</strong></p>
                             {% endif %}
-                            <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                         </div>
 
                         <div class="col-3 text-end">
@@ -66,10 +72,10 @@
                         </div>
                     </div>
                 {% endfor %}
-                <hr class="my-0">
+                <hr>
                 <div class="row text-black text-end">
                     <div class="col-7 offset-2">
-                        <p class="my-0">Total: </p>
+                        <p class="my-0"><strong>Grand Total:</strong></p>
                     </div>
                     <div class="col-3">
                         <p class="my-0"><strong>€{{ grand_total|floatformat:2 }}</strong></p>
@@ -78,7 +84,7 @@
             </div>
             
             <!-- Checkout Form -->
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 order-lg-last">
                 <p class="text-muted">Please fill out our form below in order to proceed with your purchase</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
@@ -94,13 +100,13 @@
                     </fieldset>
 
                     <div class="submit-button text-end mt-5 mb-2">
-                        <a href="{% url 'view_cart' %}" class="btn btn-outline-dark rounded-0">
+                        <a href="{% url 'view_cart' %}" class="btn btn-outline-dark rounded-0 adjust-cart-btn">
                             <span class="icon"><i class="fa-solid fa-dog"></i></span>
-                            <span class="fw-bold">Adjust Cart</span>
+                            <span class="fw-bold"> Adjust Cart</span>
                         </a>
-                        <button id="submit-button" class="btn btn-dark rounded-0">
+                        <button id="submit-button" class="btn btn-dark rounded-0 complete-purchase-btn">
                             <span class="icon"><i class="fas fa-lock"></i></span>
-                            <span class="fw-bold">Complete Purchase</span>
+                            <span class="fw-bold"> Complete Purchase</span>
                         </button>
                         <p class="small text-danger my-0 mt-2">
                             <span class="icon"><i class="fas fa-exclamation-circle"></i></span>
@@ -111,4 +117,11 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key"}}
+    {{ client_secret|json_script:"id_client_secret"}}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
