--- a/templates/base.html
+++ b/templates/base.html
@@ -156,6 +156,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://kit.fontawesome.com/2b7435e410.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     <!-- This runs after everything else -->
