Add time_frame field to the Course model for training duration

--- a/bundles/templates/bundles/bundles.html
+++ b/bundles/templates/bundles/bundles.html
@@ -4,18 +4,24 @@
 {% block body_class %}bundles-page{% endblock %}
 
 {% block page_header %}
-    <div class="container header-container list-pages-headers">
-        <div class="row">
-            <div class="col">
-                <h2 class="text-center text-uppercase">Bundles</h2>
-            </div>
-        </div>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 
 {% block content %}
     <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Bundles</h2>
+                <hr>
+            </div>
+        </div>
+
         <div class="row">
             <div class="bundle-container col-12">
                 <div class="row mt-1 mb-2"></div>
