--- a/courses/templates/courses/courses.html
+++ b/courses/templates/courses/courses.html
@@ -4,11 +4,9 @@
 {% block body_class %}courses-page{% endblock %}
 
 {% block page_header %}
-<div class="container header-container list-pages-headers">
+<div class="container mt-5">
     <div class="row">
-        <div class="col">
-            <h2 class="text-center text-uppercase">Courses</h2>
-        </div>
+        <div class="col"></div>
     </div>
 </div>
 {% endblock %}
@@ -16,6 +14,14 @@
 
 {% block content %}
     <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <hr>
+                <h2 class="logo-font mb-4">Courses</h2>
+                <hr>
+            </div>
+        </div>
+
         <div class="row">
             <div class="course-container col-12">
                 <div class="row mt-1 mb-2"></div>
@@ -33,10 +39,18 @@
                                 </a>
                                 {% endif %}
                                 <div class="card-body">
+                                    <!-- Category -->
                                   <a href="#"><p class="course-category">{{ course.category }}</p></a>
+                                  <!-- Duration -->
+                                  <p class="card-text">
+                                    <strong><i class="fa-solid fa-calendar me-2"></i> Training Duration: </strong>{{ course.get_time_frame_display }}</p>
+                                  <!-- Title -->
                                   <a href="{% url 'course_detail' course.id %}"><h3 class="card-title">{{ course.title }}</h3></a>
+                                  <!-- Description -->
                                   <p class="card-text">{{ course.description }}</p>
                                 </div>
+
+                                <!-- Card Footer -->
                                 <div class="card-footer d-flex justify-content-between align-items-center pb-3">
                                     <h5 class="mb-0">€{{ course.price }}</h5>
                                     <form action="{% url 'add_to_cart' course.id %}" method="POST">
