--- a/bundles/templates/bundles/bundles.html
+++ b/bundles/templates/bundles/bundles.html
@@ -18,6 +18,7 @@
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4">Bundles</h2>
+                <h4 class="text-muted">Bundles are curated sets of courses designed to help you achieve specific training goals — and save while you’re at it!</h4>
                 <hr>
             </div>
         </div>
@@ -30,9 +31,9 @@
                         <div class="col-sm-12 col-md-6 col-lg-4 pb-5">
                             <div class="card h-100">
                                 {% if bundle.image %}
-                                    <img src="{{ bundle.image.url }}" class="card-img-top" alt="{{ bundle.title }}" loading="lazy">
+                                    <img src="{{ bundle.image.url }}" class="card-img-top-bundles" alt="{{ bundle.title }}" loading="lazy">
                                 {% else %}
-                                    <img src="{{ MEDIA_URL }}noimage.jpg" class="card-img-top" alt="{{ bundle.title }}" loading="lazy">
+                                    <img src="{{ MEDIA_URL }}noimage.jpg" class="card-img-top-bundles" alt="{{ bundle.title }}" loading="lazy">
                                 {% endif %}
                                 <div class="card-body">
                                     <h3 class="bundle-card-title text-center">{{ bundle.title }}</h3>
