Change 'Meet the Team' nav element to 'Home'; add Stripe webhook handler

--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@
         {% endif %}
     </div>
     <!-- Pawgress logo on mobile -->
-    <main class="container mt-5 pt-5">
+    <main class="container pt-5">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-start d-lg-none">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
                 <h1 class="logo-font text-black my-0 mt-2">
