--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -71,12 +71,15 @@
                                     </td>
                                 </tr>
                                 <tr>
+                                    
                                     <td colspan="3" class="text-end">
-                                        <a href="{% url 'courses' %}" class="btn btn-lg rounded-0 text-uppercase py-3 cart-browse-btn border border-black border-1">
-                                            <i class="fa-solid fa-dog"></i> Keep Browsing
+                                        <!-- Keep Browsing btn -->
+                                        <a href="{% url 'courses' %}" class="btn btn-sm rounded-0 text-uppercase py-3 cart-browse-btn border border-black border-1">
+                                            <i class="fa-solid fa-dog me-1"></i> Keep Browsing
                                         </a>
-                                        <a href="{% url 'checkout' %}" class="btn btn-lg rounded-0 text-uppercase py-3 secure-checkout-btn border border-black border-1">
-                                            Secure Checkout <i class="fa-solid fa-lock"></i>
+                                        <!-- Secure Checkout btn -->
+                                        <a href="{% url 'checkout' %}" class="btn btn-sm rounded-0 text-uppercase py-3 secure-checkout-btn border border-black border-1">
+                                            <i class="fa-solid fa-lock me-1"></i> Secure Checkout
                                         </a>
                                     </td>
                                 </tr>
