Restrict course content access to users who purchased them

--- a/profiles/templates/profiles/my_courses.html
+++ b/profiles/templates/profiles/my_courses.html
@@ -24,6 +24,7 @@
                         {% endif %}
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">{{ course.title }}</h5>
+                            <p class="card-text py-3"><strong><i class="fa-solid fa-calendar me-2"></i> Training Duration: </strong>{{ course.get_time_frame_display }}</p>
                             <p class="card-text">{{ course.description }}</p>
                             
                             <!-- Course completed checkbox -->
@@ -37,9 +38,11 @@
                                     <label class="form-check-label" for="completed-{{ course.id }}"> Mark as completed</label>
                                 </div>
                                 <!-- Go to Course button -->
-                                <a href="{% url 'course_detail' course.id %}" class="btn btn-primary go-to-course-btn text-uppercase border border-1 border-black">
-                                    Go to Course
-                                </a>
+                                <div class="d-flex justify-content-end">
+                                    <a href="{% url 'course_detail' course.id %}" class="btn btn-primary go-to-course-btn text-uppercase border border-1 border-black">
+                                        Go to Course
+                                    </a>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -48,10 +51,12 @@
         </div>
     {% else %}
         <p class="pb-3">You haven't purchased any courses yet.</p>
+        <div class="d-flex justify-content-end mt-auto">
         <a href="{% url 'courses' %}" class="btn btn-lg rounded-0 text-uppercase py-3 profile-browse-btn border border-black border-1">
             <span class="icon">
                 <i class="fa-solid fa-dog"></i>
             </span>
+            <!-- Browse courses button -->
             <span class="text-uppercase">Browse Courses</span>
         </a>
     {% endif %}
