--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -27,7 +27,7 @@
     <div class="container my-5">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10">
-                {% if user.is_authenticated and course in user.purchasd_courses.all %}
+                {% if has_access %}
                     <div class="course-content">
                         {{ course.content|safe }}
                     </div>
